--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/style.css": "/css/style.css",
+    "/css/mobil.css": "/css/mobil.css",
     "/css/admin.css": "/css/admin.css",
     "/js/main.js": "/js/main.js"
 }
