--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/style.css": "/css/style.css",
     "/css/mobil.css": "/css/mobil.css",
     "/css/admin.css": "/css/admin.css",
+    "/js/mobil.js": "/js/mobil.js",
     "/js/main.js": "/js/main.js"
 }
